force-app/main/default/objects/Dummy_Profile_Test__c/Dummy_Profile_Test__c.object-meta.xml
<CustomObject>
    
    <label>Dummy Profile Test</label>
    <nameField>
        <displayFormat>DPT-{0000}</displayFormat>
        <label>Dummy Profile Test Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dummy Profile Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>