force-app/main/default/objects/Dummy_Profile_Test__c/fields/Dummy_Flag__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dummy Flag</label>
    <type>Checkbox</type>
</CustomField>