force-app/main/default/objects/Dummy_Profile_Test__c/fields/Dummy_Number__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Number__c</fullName>
    <label>Dummy Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>