force-app/main/default/objects/Dummy_Profile_Test__c/fields/Dummy_Text__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Text__c</fullName>
    <label>Dummy Text</label>
    <length>80</length>
    <type>Text</type>
</CustomField>